# hCraft-2

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindCryptoPP.cmake  FindLibEvent.cmake  FindZLIB.cmake
include/cmd/: command.hpp  command_reader.hpp
include/cmd/info/: help.hpp
include/entity/: entity.hpp  metadata.hpp  player.hpp
include/inv/: inventory.hpp  slot.hpp  window.hpp
include/network/: connection.hpp  packet.hpp  packet_builder.hpp  packet_delimiter.hpp  packet_handler.hpp  packet_transformer.hpp  protocol.hpp
include/network/builders/: mc18.hpp
include/network/handlers/: infer.hpp  mc18.hpp
include/network/transformers/: aes.hpp  zlib_mc18.hpp
include/os/: fs.hpp  http.hpp  tls.hpp
include/os/windows/: stdafx.hpp
include/player/: player.hpp  uuid_manager.hpp
include/slot/: blocks.hpp  slot.hpp
include/system/: authenticator.hpp  logger.hpp  server.hpp
include/util/: binary.hpp  byte_buffer.hpp  common.hpp  json.hpp  nbt.hpp  position.hpp  refc.hpp  scheduler.hpp  thread.hpp  thread_pool.hpp  uuid.hpp
include/world/: async_generator.hpp  blocks.hpp  chunk.hpp  lighting.hpp  world.hpp  world_generator.hpp  world_provider.hpp
include/world/generators/: flatgrass.hpp
include/world/providers/anvil/: provider.hpp
src/: main.cpp
src/cmd/: command.cpp  command_reader.cpp
src/cmd/info/: help.cpp
src/entity/: entity.cpp  metadata.cpp  player.cpp
src/inv/: inventory.cpp  slot.cpp  window.cpp
src/network/: connection.cpp  packet.cpp  packet_delimiter.cpp  packet_handler.cpp  packet_transformer.cpp  protocol.cpp
src/network/builders/: mc18.cpp
src/network/handlers/: infer.cpp  mc18.cpp
src/network/transformers/: aes.cpp  zlib_mc18.cpp
src/os/linux/: fs.cpp  http.cpp  tls.cpp
src/os/share/: fs.cpp
src/os/windows/: fs.cpp  http.cpp  tls.cpp
src/player/: player.cpp  uuid_manager.cpp
src/slot/: blocks.cpp  slot.cpp
src/system/: authenticator.cpp  logger.cpp  server.config.cpp  server.cpp
src/util/: binary.cpp  byte_buffer.cpp  json.cpp  nbt.cpp  position.cpp  scheduler.cpp  thread.cpp  thread_pool.cpp  uuid.cpp
src/world/: async_generator.cpp  blocks.cpp  chunk.cpp  lighting.cpp  world.cpp  world_generator.cpp  world_provider.cpp
src/world/generators/: flatgrass.cpp
src/world/providers/anvil/: provider.cpp
win32/lib/: libevent.lib  libevent_core.lib  libevent_extras.lib  zdll.exp  zdll.lib  zlib.lib
